|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.1 RC3
- Added "max_file_uploads" INI directive, which can be set to limit the
  number of file uploads per-request to 100 by default, to prevent possible
  DOS via temporary file exhaustion. (Ilia)

- Fixed crash in com_print_typeinfo when an invalid typelib is given. (Pierre)

- Fixed bug #49142 (crash when exception thrown from __tostring()).
  (David Soria Parra)
- Fixed bug #49986 (Missing ICU DLLs on windows package). (Pierre)
- Fixed bug #48752 (Crash during date parsing with invalid date). (Pierre)

20 Oct 2009, PHP 5.3.1 RC2
- Upgraded bundled sqlite to version 3.6.19. (Scott)

- Fixed a safe_mode bypass in tempnam() identified by Grzegorz Stachowiak.  
  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak.  (Rasmus)
- Fixed certificate validation inside php_openssl_apply_verification_policy
  (Ryan Sleevi, Ilia)

- Fixed crash in SQLiteDatabase::ArrayQuery() and SQLiteDatabase::SingleQuery()
  when calling using Reflection. (Felipe)
- Fixed crash when instantiating PDORow and PDOStatement through Reflection.
  (Felipe)
- Changed ini file directives [PATH=](on Win32) and [HOST=](on all) to be case 
  insensitive (garretts)
- Restored shebang line check to CGI sapi (not checked by scanner anymore).
  (Jani)
- Added support for ACL on Windows for thread safe SAPI (Apache2 for example)
  and fix its support on NTS. (Pierre)
- Improve symbolic, mounted volume and junctions support for realpath on 
  Windows. (Pierre)


- Fixed bug #49847 (exec() fails to return data inside 2nd parameter, given
  output lines >4095 bytes). (Ilia)
- Fixed bug #49809 (time_sleep_until() is not available on OpenSolaris). (Jani)
- Fixed bug #49757 (long2ip() can return wrong value in a multi-threaded
  applications). (Ilia, Florian Anderiasch)
- Fixed bug #49738 (calling mcrypt after mcrypt_generic_deinit crashes).
  (Sriram Natarajan)